<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasySplit</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_button">Events</string>
    <string name="payment_button">Payment</string>        
    <string name="setting_button">Settings</string>
    <string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="signup">Sign Up</string>
	<string name="logout">Logout</string>
	<string name="confirm">Confirm Password</string>
    <string name="eventName">Enter your event name</string>
    <string name="addPerson">Add a person</string>
    <string name="inviteAFriend">+</string>
    <string name="event_submit">Submit</string>
    <string name="event_done">Done</string>
    <string name="event_save">Save</string>
    <string name="event_confirm">Confirm</string>
    <string name="event_cancel">Cancel</string>
    
     
    
</resources>
