<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent" 
			android:layout_height="match_parent" 
			android:orientation="vertical" 
			android:gravity="center">
			<EditText
			    android:id="@+id/username"
			    android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:hint="@string/username"
			    android:inputType="text" />
			<EditText
			    android:id="@+id/password"
			    android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:hint="@string/password"
			    android:inputType="textPassword" />
			<Button
			    android:id="@+id/login"
			    android:layout_width="128dp"
			    android:layout_height="wrap_content"
			    android:text="@string/login"
      			android:layout_marginBottom ="25dp" />
			<Button
			    android:id="@+id/signup"
			    android:layout_width="128dp"
			    android:layout_height="wrap_content"
			    android:text="@string/signup"
      			android:layout_marginBottom ="25dp" />
</LinearLayout>
