<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical" >
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <Button
      android:id="@+id/event_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/event_button" />
    <Button
      android:id="@+id/payment_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/payment_button" />
    <Button
      android:id="@+id/setting_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/setting_button" />
  </LinearLayout>
</LinearLayout>