<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_event_editing"
    android:orientation="vertical" >
   <EditText
			    android:id="@+id/event_name"
			    android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:hint="@string/eventName"
			    android:inputType="text" /> 
	<LinearLayout
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    	<EditText
			    android:id="@+id/person_to_add_to_event"
			    android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:hint="@string/addPerson"
			    android:inputType="text" /> 
				<Button
			    android:id="@+id/addAPerson"
			    android:layout_width="64dp"
			    android:layout_height="wrap_content"
			    android:text="@string/inviteAFriend"
      			android:layout_marginBottom ="25dp" />
	    
	</LinearLayout>

			    
	<FrameLayout 
  				android:id="@+id/eventAttenderContainer"
  				android:layout_width="match_parent"
  				android:layout_height="match_parent"/>
</LinearLayout>
